Fix green box behavior of modals, on safari browser

--- a/styles/modals.css
+++ b/styles/modals.css
@@ -420,7 +420,7 @@
   justify-content: center;
   align-items: start;
   grid-template-columns: 1fr 0.2fr 1fr;
-  padding: 2rem;
+  padding: 1rem;
   column-gap: 1rem;
   max-height: 300px;
 }
@@ -454,7 +454,7 @@
 }
 
 .modal-proceso1-quote {
-  padding: 0 2.5rem;
+  padding: 0 1rem;
   color: var(--blanco);
   font-size: 0.8rem;
   font-weight: 500;
@@ -992,19 +992,23 @@
   .modal-proceso1 {
     display: grid;
     justify-content: center;
-    grid-auto-flow: row;
     grid-template-columns: 1fr;
     position: relative;
     z-index: 999;
-    max-height: fit-content;
-    gap: 0rem;
+    max-height: 100%;
   }
 
   .modal-proceso1-divisor {
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
     transform: rotate(90deg);
+  }
+
+  .modal-proceso1-divisor > img{
+    width: 100%;
+    height: 150px;
+    
   }
 
   .proceso-modal-title {
